# user-service

./: .gitignore  .gitmodules  Dockerfile  README  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/core/db/: db_hellper.py
app/core/db/models/: base.py  user.py
app/core/db/repositories/: iuser_repositories.py  user_repositories.py
app/gateway/gRPC/: server.py  user_server.py
app/gateway/services/: iuser_service.py  user_service.py
app/gateway/utils/: checks.py  convert.py
app/kafka/: kf_helper.py
app/kafka/repositories/: kafka_repositories.py
app/post_service/gRPC/: post_server.py  server.py
app/post_service/services/: ipost_service.py  post_service.py
app/post_service/utils/: checks.py
migrations/: env.py
migrations/versions/: 2025_11_29_1749-b3e13817489d_init.py
